# offensive-azure

./: .pylintrc  README.md  SECURITY.md  pyproject.toml  user-enum.py
.github/workflows/: .pylintrc  codeql-analysis.yml  pylint.yml  python-publish.yml
Access_Tokens/: README.md  token-juggle.py  token_juggle.py
Device_Code/: README.md  device-code-easy-mode.py  device_code_easy_mode.py
Outsider_Recon/: README.md  outsider-recon.py  outsider_recon.py
User_Enum/: README.md  requirements.txt  user-enum.py  user_enum.py
offensive-azure/: __init__.py
offensive-azure/Outsider_Recon/: README.md  outsider_recon.py
offensive_azure/: __init__.py
offensive_azure/Access_Tokens/: README.md  read_token.py  requirements.txt  token_juggle.py
offensive_azure/Azure_AD/: README.md  get_group_members.py  get_groups.py  get_resource_groups.py  get_subscriptions.py  get_tenant.py  get_users.py  get_vms.py
offensive_azure/Device_Code/: device_code_easy_mode.py
offensive_azure/Outsider_Recon/: README.md  outsider_recon.py  requirements.txt
offensive_azure/User_Enum/: README.md  user_enum.py
tests/: __init__.py  test_offensive_azure.py
